revamped homepage, updated navigation, restructured features for stack on mobile + fix inside container better

--- a/web/templates/css/style.css
+++ b/web/templates/css/style.css
@@ -11,7 +11,7 @@
  }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color: #2d2d2d;
 }
 
@@ -61,10 +61,27 @@ footer, #min-height:after {
   margin-top: 15%;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 nav {
   position: fixed;
   top: 0;
   z-index: 100;
+}
+
+.nav-theme {
+  background-color: white;
+  color: black;
+}
+
+.nav-theme .brand-logo {
+  color: black;
+}
+
+nav ul li a, nav ul li a:hover {
+  color: black;
 }
 
 footer {
@@ -141,6 +158,25 @@ pre {
 i.large {
   font-size: 2.92rem;
 }
-#index-banner {
-  margin-top: 70px;
+
+.hero-bg {
+  height: 850px;
+  background: black;
+  background: url(/img/bg.jpg) no-repeat bottom center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.btn-large:hover a:hover {
+  color: white;
+}
+
+.hero-bg .container {
+  margin-top: 15%;
+}
+
+.hero-bg h1, .hero-bg h5 {
+  color: black;
 }
